Fix file card text jumping (#51)
*Fix file card text flickering issue when action messages are shown!

* Fix file card alignment in ie11

--- a/packages/components/file-card/src/file-card.css
+++ b/packages/components/file-card/src/file-card.css
@@ -49,6 +49,7 @@
 	justify-content: center;
 	flex-grow: 2;
 	max-width: calc(100% - 20px - 35px);
+	width: calc(100% - 20px - 35px);
 	padding: var(--ts-unit-half) var(--ts-unit-half);
 }
 
@@ -81,7 +82,7 @@
 		& .file-information,
 		& .error-message,
 		& .progress-bar {
-			display: block;
+			display: initial;
 		}
 	}
 }
@@ -105,6 +106,7 @@
 		}
 	}
 }
+
 .progress-bar {
 	--ts-progress-bar-margin: calc(
 		(var(--ts-unit) - var(--ts-progress-bar-height)) / 2
@@ -127,23 +129,11 @@
 .state-download .download-action {
 	display: block;
 }
+
 .state-download[data-removable] .download-action {
 	display: none;
 }
 
-.file-card-wrapper .file-card {
-	align-items: center;
-	background-color: var(--ts-color-white);
-	border-radius: var(--ts-radius);
-	border: var(--ts-border);
-	cursor: pointer;
+.file-information {
 	display: flex;
-	height: calc(6.5 * var(--ts-unit-half));
-	justify-content: space-between;
-	margin-bottom: var(--ts-unit-half);
-	overflow: hidden;
-	padding: calc(0.5 * var(--ts-unit-half)) calc(1px + var(--ts-unit-half));
-	position: relative;
-	transition: border var(--ts-transition-fast) ease;
-	width: 100%;
 }
